# capstone-2023-16

./: .env.template  .gitignore  CNAME  README.md  index.md
back/: .env.template  Dockerfile  README.md  cron  docker-compose.yml  firebase-credential.json  heroku.yml  pyproject.toml  requirements.txt  utils.py
back/auth_app/: models.py  schema.py
back/auth_app/migrations/: 0001_initial.py  0002_emailuser_remove_user_email.py  0003_alter_emailuser_table.py  0004_emailuser_user_user_last_login_user_password.py  0005_alter_emailuser_email_alter_user_username.py  0006_user_email.py  0007_post.py  0008_alter_post_created_at_alter_post_is_deleted_and_more.py  0009_alter_post_is_deleted.py
back/auth_app/schemas/: post.py  schema.py  types.py  user.py  utils.py
back/common_app/: apps.py
back/common_app/schemas/: types.py
back/config/: cron.py  settings.py  urls.py
back/firebase_app/: __init__.py
back/firebase_app/cloud_messaging/: service.py
back/graphql_app/: __init__.py  apps.py  models.py  permissions.py  signals.py
back/graphql_app/migrations/: 0001_initial.py  0002_alter_persona_age_group_alter_persona_gender.py  0002_rename_user_id_post_user.py  0003_rename_age_group_persona_age.py  0004_alter_persona_age_alter_persona_gender.py  0005_merge_20230301_1539.py  0006_alter_persona_age.py  0007_tag_persona_preferred_tags_post_tags.py  0008_tag_created_at.py  0009_delete_emailuser.py  0010_remove_persona_user_remove_post_user_persona_owner_and_more.py  0011_alter_persona_gender_alter_persona_is_public.py  0012_category.py  0013_persona_preferred_categories_and_more.py  0014_post_category.py  0015_category_created_at.py  0016_user_is_admin.py  0017_rename_is_admin_user_is_staff.py  0018_alter_category_body.py  0019_persona_following_personas.py  0020_post_read_count.py  0021_alter_post_author.py  0022_alter_persona_options_alter_post_options_and_more.py  0023_alter_category_table_alter_persona_table_and_more.py  0024_alter_persona_introduction.py  (+33 more)
back/persona_app/: admin.py  apps.py  models.py
(+503 files in other folders)
